// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberCelebrate renders correctly 1`] = `
<CelebrateFeed
  communityId="123"
  itemNamePressable={false}
  personId="1"
/>
`;

exports[`MemberCelebrate renders correctly for me 1`] = `
<CelebrateFeed
  communityId="123"
  itemNamePressable={false}
  personId="2"
/>
`;

exports[`MemberCelebrate renders correctly for owner 1`] = `
<CelebrateFeed
  communityId="123"
  itemNamePressable={false}
  personId="1"
/>
`;
